<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="applicationName">Scroid</string>
<string name="versionInfo">1.0.0 RC 1</string><string name="galleryUrl">http://scroid.com/web/public/jsonlist</string><string name="hint">Click on an image to show preview.</string>
<string name="previewTitle">Preview</string>
<string name="previewOkButtonText">Use</string>
<string name="cancelButtonText">Cancel</string>
<string name="closeText">Close</string>
<string name="aboutMenuItemText">About</string>
<string name="rolesAmer">Idea &amp; Service Implementation</string>
<string name="rolesDaniel">Software Development</string>
<string name="receivingException">Error while receiving wallpaper list. Please check your internet connection.</string>

<string name="downloadException">Download failed. Please check your internet connection.</string>
<string name="errorText">Error</string>

<string name="applyWallpaperText">Applying wallpaper...</string>
<string name="loadingText">Loading data...</string>
<string name="preparingText">Preparing preview...</string>
<string name="parseExceptionText">Error while parsing datasource. Please contact the software vendor.</string>
<string name="recommendMenuItemText">Recommend</string>
<string name="recommendToTitleText">Send recommend to...</string>
<string name="recommendSmsPattern">Check out this cool wallpaper: %s</string>
<string name="recommendEmailPattern">Check out this cool wallpaper: %s</string>
<string name="infoText">Info</string>
<string name="noCommunicationFoundInfoText">No mobile number or email address found.</string>
<string name="settingsCacheSize">Disk cache size (permanent cache in KB)</string>
<string name="settingsMenuItemText">Settings</string>
<string name="settingsTitle">Settings</string>
<string name="okButtonText">OK</string>
<string name="favouritesText">Favourites</string>
<string name="addFavouriteText">Add to favourites</string>
<string name="removeFavouriteText">Remove from favourites</string>

<string name="noFavouritesDefinedText">No favourites defined yet.</string>
<string name="settingsCachingGroupHeader">Caching</string>
<string name="wallpaperSetFailedErrorMessage">Wallpaper could not be set.</string>
</resources>
